--- a/package.json
+++ b/package.json
@@ -69,14 +69,14 @@
     "electron": "^20.1.1",
     "electron-is-dev": "^2.0.0",
     "fs-extra": "^10.0.0",
-    "go-ipfs": "^0.8.0",
-    "ipfs": "^0.55.1",
-    "ipfs-core": "^0.6.1",
+    "go-ipfs": "^0.15.0",
+    "ipfs": "^0.64.0",
+    "ipfs-core": "^0.16.0",
     "ipfs-http-client": "^49.0.4",
-    "ipfs-pubsub-room": "^2.0.1",
-    "ipfs-utils": "8.0.0",
-    "ipfsd-ctl": "^8.0.2",
-    "is-ipfs": "^5.0.0",
+    "ipfs-pubsub-room": "^3.0.0",
+    "ipfs-utils": "^9.0.7",
+    "ipfsd-ctl": "^12.0.2",
+    "is-ipfs": "^6.0.2",
     "jquery": "^3.6.0",
     "sqlite3": "^5.0.11",
     "wait-on": "^6.0.0"
