--- a/package.json
+++ b/package.json
@@ -49,15 +49,18 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "core-js": "^3.25.1",
     "datatables.net-bs": "^1.10.19",
     "datatables.net-dt": "^1.10.19",
     "electron-builder": "^22.6.0",
     "react": "^17.0.2",
     "react-data-table-component": "^7.0.0-rc2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^14.2.2",
     "react-jsonschema-form": "^1.8.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
+    "reactstrap": "^9.1.4",
     "vis-data": "^7.1.2",
     "vis-network": "^9.0.4"
   },
