--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ package-lock.json # not sure if I should gitignore this or not
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+/public/grapevine/assets/users
