--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "datatables.net-bs": "^1.10.19",
     "datatables.net-dt": "^1.10.19",
     "electron-builder": "^22.6.0",
+    "marked": "^4.1.0",
     "p5": "^1.4.2",
     "react": "^17.0.2",
     "react-data-table-component": "^7.0.0-rc2",
