--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-jsonschema-form": "^1.8.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
+    "react-tabs": "^4.2.1",
     "reactstrap": "^9.1.4",
     "vis-data": "^7.1.2",
     "vis-network": "^9.0.4"
