--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "marked": "^4.1.0",
     "nouislider-react": "^3.4.1",
     "p5": "^1.4.2",
+    "papaparse": "^5.3.2",
     "react": "^17.0.2",
     "react-data-table-component": "^7.0.0-rc2",
     "react-dom": "^17.0.2",
