--- a/package.json
+++ b/package.json
@@ -62,11 +62,13 @@
     "react-data-table-component": "^7.0.0-rc2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^14.2.2",
+    "react-google-charts": "^4.0.0",
     "react-jsonschema-form": "^1.8.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "react-tabs": "^4.2.1",
     "reactstrap": "^9.1.4",
+    "victory": "^36.6.8",
     "vis-data": "^7.1.2",
     "vis-network": "^9.0.4"
   },
