--- a/package.json
+++ b/package.json
@@ -56,7 +56,10 @@
     "core-js": "^3.25.1",
     "datatables.net-bs": "^1.10.19",
     "datatables.net-dt": "^1.10.19",
-    "electron-builder": "^22.6.0",
+    "electron-is-dev": "^2.0.0",
+    "husky": "^8.0.2",
+    "ipfs-core": "^0.17.0",
+    "ipfs-http-client": "^49.0.4",
     "marked": "^4.1.0",
     "nouislider-react": "^3.4.1",
     "p5": "^1.4.2",
@@ -81,12 +84,8 @@
     "datatables.net-buttons": "^1.5.4",
     "datatables.net-dt": "^1.10.19",
     "electron": "^20.1.1",
-    "electron-is-dev": "^2.0.0",
+    "electron-builder": "^23.6.0",
     "fs-extra": "^10.0.0",
-    "go-ipfs": "^0.15.0",
-    "ipfs": "^0.64.0",
-    "ipfs-core": "^0.16.0",
-    "ipfs-http-client": "^49.0.4",
     "ipfs-pubsub-room": "^3.0.0",
     "ipfs-utils": "^9.0.7",
     "ipfsd-ctl": "^12.0.2",
