--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "datatables.net-dt": "^1.10.19",
     "electron-is-dev": "^2.0.0",
     "husky": "^8.0.2",
+    "ipfs": "^0.65.0",
     "ipfs-core": "^0.17.0",
     "ipfs-http-client": "^49.0.4",
     "marked": "^4.1.0",
