--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "datatables.net-bs": "^1.10.19",
     "datatables.net-dt": "^1.10.19",
     "electron-is-dev": "^2.0.0",
+    "gun": "^0.2020.1238",
     "husky": "^8.0.2",
     "ipfs": "^0.65.0",
     "ipfs-core": "^0.17.0",
