--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "ipfs-core": "^0.17.0",
     "ipfs-http-client": "^49.0.4",
     "marked": "^4.1.0",
+    "nostr-tools": "^0.24.1",
     "nouislider-react": "^3.4.1",
     "p5": "^1.4.2",
     "papaparse": "^5.3.2",
