--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   "scripts": {
     "pack": "electron-builder --dir",
     "dist": "electron-builder",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "dev": "concurrently -k \"BROWSER=none npm start\" \"npm:electron\"",
     "electron": "wait-on tcp:3000 && electron .",
@@ -63,7 +63,7 @@
     "ipfs-core": "^0.17.0",
     "ipfs-http-client": "^49.0.4",
     "marked": "^4.1.0",
-    "nostr-tools": "^0.24.1",
+    "nostr-tools": "^1.0.0-beta",
     "nouislider-react": "^3.4.1",
     "p5": "^1.4.2",
     "papaparse": "^5.3.2",
@@ -82,19 +82,29 @@
     "vis-network": "^9.0.4"
   },
   "devDependencies": {
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
     "concurrently": "^6.2.0",
+    "crypto-browserify": "^3.12.0",
     "datatables.net": "^1.10.19",
     "datatables.net-buttons": "^1.5.4",
     "datatables.net-dt": "^1.10.19",
     "electron": "^20.1.1",
     "electron-builder": "^23.6.0",
     "fs-extra": "^10.0.0",
+    "https-browserify": "^1.0.0",
     "ipfs-pubsub-room": "^3.0.0",
     "ipfs-utils": "^9.0.7",
     "ipfsd-ctl": "^12.0.2",
     "is-ipfs": "^6.0.2",
     "jquery": "^3.6.1",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
+    "react-app-rewired": "^2.2.1",
     "sqlite3": "^5.0.11",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.0",
     "wait-on": "^6.0.0"
   },
   "build": {
